# ai-hedge-fund

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/actions/setup-fund/: action.yml
.github/workflows/: backtest.yml  ci-cd.yml  daily-scan.yml  deploy-orchestrator.yml  market-data-pull.yml  monte-carlo.yml  rebalance.yml  setup-fund
dashboard/: .env.example  README.md
data/: etf_holdings_data.json
reports/: Bottleneck_Capital_Strategy_July9_2026.txt
signals/: .gitkeep
src/: config.py  dashboard.py  data_layer.py  imaw_engine.py  orchestrator.py  paper_trader.py  risk_manager.py  sleeve_engine.py
src/ai_hedge_fund/: __init__.py  __main__.py  cli.py  config.py  scan.py
strategies/: IAE_Tech_Confluence.pine
templates/: dashboard.html
tests/: __init__.py  test_cli.py
tradingview_indicators/: Constituent_Screener_v6.pine  ETF_Master_Dashboard_v6.pine  OptionsFlowComposite_v6.pine  README.md
webhook_receiver/: README.md  app.py
