[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hedge-fund"
version = "1.0.0"
description = "AI-driven multi-sleeve hedge fund system with TradingAgents integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "AI Hedge Fund Team"}]
keywords = ["trading", "hedge-fund", "ai", "quantitative", "portfolio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.28",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "mypy>=1.7.0", "ruff>=0.1.0"]

[project.scripts]
ai-hedge-fund = "ai_hedge_fund.cli:main"

[project.urls]
Homepage = "https://github.com/michaelrcreagan-hash/ai-hedge-fund"
Repository = "https://github.com/michaelrcreagan-hash/ai-hedge-fund"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 160
select = ["E", "F", "I", "W"]
ignore = ["E501", "E701", "E702", "E722", "E741", "F401", "F541", "F841", "I001", "W291", "W293"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
